# FlexRAN-FEC-SDK-Modules

./: .gitattributes  Apache_license.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  Readme.md  create-makefiles-linux.sh  export_settings.sh  kernel-list-gcc.cmake  kernel-list.cmake
cmake/: gcc-compile-options.cmake  icx-compile-options.cmake  intel-compile-options.cmake  toolchain-gcc-linux.cmake  toolchain-icx-linux.cmake  toolchain-intel-linux.cmake
doc/: License_IA_restriction.txt
source/phy/: CMakeLists.txt
source/phy/lib_LDPC_ratematch_5gnr/: CMakeLists.txt  phy_LDPC_ratematch_5gnr.cpp  phy_LDPC_ratematch_5gnr.h  phy_LDPC_ratematch_5gnr_avx512.cpp
source/phy/lib_common/: CMakeLists.txt  bblib_common.cpp  bblib_common.hpp  bblib_common_const.h  bit_reverse.cpp  bit_reverse.h  bit_reverse_avx2.cpp  bit_reverse_avx512.cpp  bit_reverse_c.cpp  common_typedef_sdk.h  common_typedef_simd.hpp  demapper.hpp  divide.cpp  divide.h  dvec_com.hpp  dvec_fp16.hpp  dvec_fvec_ivec_gcc.h  dvec_icc.h  dvec_inc.h  dvec_int16.hpp  float_int16_convert_agc.cpp  float_int16_convert_agc.h  float_int16_convert_agc_avx2.cpp  float_int16_convert_agc_avx512.cpp  float_int16_convert_agc_c.cpp  gcc_inc.h  half.hpp  matrix.hpp  mimo.hpp  mkl_utils.h  phy_matrix_inv_cholesky.cpp  phy_matrix_inv_cholesky.h  phy_tafo_table_gen.cpp  phy_tafo_table_gen.h  pseudo_random_seq_gen.cpp  pseudo_random_seq_gen.h  sdk_version.cpp  sdk_version.h  simd_insts.hpp  simd_utils.cpp  (+1 more)
source/phy/lib_crc/: CMakeLists.txt  phy_crc.cpp  phy_crc.h  phy_crc_avx512.cpp  phy_crc_internal.h  phy_crc_snc.cpp  phy_crc_sse.cpp
source/phy/lib_ldpc_decoder_5gnr/: CMakeLists.txt  InternalApi.hpp  LayerUtilities.hpp  LdpcDecoder.hpp  LdpcDecoderTop.cpp  LdpcLayerAlignedInt16.cpp  LdpcLayeredDecoderInt16.cpp  Tables.cpp  Tables.hpp  phy_ldpc_decoder_5gnr.cpp  phy_ldpc_decoder_5gnr.h  phy_ldpc_decoder_5gnr_avx2.cpp  phy_ldpc_decoder_5gnr_avx512.cpp  phy_ldpc_decoder_5gnr_internal.h
source/phy/lib_ldpc_encoder_5gnr/: CMakeLists.txt  ldpc_encoder_cycshift.cpp  ldpc_encoder_cycshift.h  phy_ldpc_encoder_5gnr.cpp  phy_ldpc_encoder_5gnr.h  phy_ldpc_encoder_5gnr_avx512.cpp  phy_ldpc_encoder_5gnr_internal.h
source/phy/lib_rate_dematching_5gnr/: CMakeLists.txt  lib_rate_dematching_5gnr.pc.in  phy_rate_dematching_5gnr.cpp  phy_rate_dematching_5gnr.h  phy_rate_dematching_5gnr_avx512.cpp  phy_rate_dematching_5gnr_c.cpp  phy_rate_dematching_5gnr_internal.cpp  phy_rate_dematching_5gnr_internal.h
source/phy/lib_rate_matching/: CMakeLists.txt  phy_de_rate_match_avx2.cpp  phy_de_rate_match_avx512.cpp  phy_rate_match.cpp  phy_rate_match.h  phy_rate_match_avx2.cpp  phy_rate_match_internal.h  phy_rate_match_sse.cpp  phy_rate_match_sse_k6144.cpp  phy_rate_match_sse_short.cpp
source/phy/lib_turbo/: CMakeLists.txt  phy_turbo.cpp  phy_turbo.h  phy_turbo_decoder_16windows_sse.cpp  phy_turbo_decoder_32windows_avx2.cpp  phy_turbo_decoder_64windows_avx512.cpp  phy_turbo_decoder_8windows_sse.cpp  phy_turbo_decoder_MakeTable.cpp  phy_turbo_encoder_avx2.cpp  phy_turbo_encoder_avx512.cpp  phy_turbo_encoder_sse.cpp  phy_turbo_fast_interleave_sse.cpp  phy_turbo_internal.h
test/phy/: CMakeLists.txt  run_all_test
test/phy/common/: CMakeLists.txt  bblib_unit_test_main.cc  common.cpp  common.hpp  json.hpp
test/phy/test_LDPC_ratematch_5gnr/: CMakeLists.txt  LDPC_ratematch_functional.cc  LDPC_ratematch_performance.cc  conf.json
test/phy/test_common/: CMakeLists.txt  bitreverse_functional.cc  bitreverse_performance.cc  common_internal_test.cc  divide_test.cc  float_fix_functional.cc  float_fix_performance.cc  matrix_inv_test.cc  prbs_functional.cc  simd_utils_test.cc
test/phy/test_crc/: CMakeLists.txt  conf.json  crc_functional.cc  crc_performance.cc
test/phy/test_ldpc_decoder_5gnr/: CMakeLists.txt  ldpc_decoder_functional.cc  ldpc_decoder_performance.cc
test/phy/test_ldpc_encoder_5gnr/: CMakeLists.txt  ldpc_encoder_functional.cc  ldpc_encoder_performance.cc
test/phy/test_rate_dematching_5gnr/: CMakeLists.txt  conf.json  rate_dematching_5gnr_functional.cc  rate_dematching_5gnr_performance.cc
test/phy/test_rate_matching/: CMakeLists.txt  rate_match_functional.cc  rate_match_performance.cc
test/phy/test_turbo/: CMakeLists.txt  turbo_functional.cc  turbo_performance.cc
